--- a/Demo_Test/Articles.xaml
+++ b/Demo_Test/Articles.xaml
@@ -40,7 +40,8 @@
 
                     </Border>
                     <Grid Grid.Row="1">
-                        <Border Background="#36C3F1" Padding="0" BorderBrush="#36C3F1" 
+                        <!-- HERE!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                        <Border Background="#2D2D30" Padding="0" BorderBrush="#36C3F1" 
                             BorderThickness="1.4" 
                             CornerRadius="5" Margin="6">
                             <Grid>
@@ -87,7 +88,8 @@
                             <Rectangle Margin="0" Width="14" Height="14" Fill="#36C3F1" />
                         </Border>
                         <Grid Margin="6 0 6 0">
-                            <Border Background="#36C3F1" Padding="0" BorderBrush="#36C3F1" 
+                            <!-- HERE!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                            <Border Background="#2D2D30" Padding="0" BorderBrush="#36C3F1" 
                             BorderThickness="1.4" 
                             CornerRadius="5" Margin="0">
                                 <Grid>
@@ -111,7 +113,7 @@
             </Grid>
         </ScrollViewer>
     </Grid>
-        <!--<Page.BottomAppBar>
+    <!--<Page.BottomAppBar>
             <AppBar LostFocus="AppBar_LostFocus" x:Name="AppBar" Visibility="Visible" VerticalAlignment="Bottom" IsSticky="True" >
                 <Grid>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
