--- a/Demo_Test/OneMain.xaml
+++ b/Demo_Test/OneMain.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    DataContext="{Binding PageDataBinding,RelativeSource={RelativeSource Mode=Self}}">
+    DataContext="{Binding oneMainViewModel,RelativeSource={RelativeSource Mode=Self}}">
     <Page.Resources>
         <Storyboard x:Name="StoryStart" Duration="0:0:1" BeginTime="0:0:0" SpeedRatio="1">
             <DoubleAnimation Storyboard.TargetName="border" Storyboard.TargetProperty="Height" To="0" EnableDependentAnimation="True" >
@@ -17,19 +17,19 @@
         </Storyboard>
     </Page.Resources>
     <Grid>
-        <!--<StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >-->
-        <StackPanel Background="#3F3F46" >
+        <StackPanel Background="{Binding ThemeColorModel.MainBodyBackgroundColor}" >
             <Border x:Name="border" Height="100" />
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <ListView Grid.Row="0" Padding="0" Opacity=".6">
+                <!--{Binding ThemeColorModel.Opacity}-->
+                <ListView Grid.Row="0" Padding="0" Opacity="{Binding ThemeColorModel.Opacity}">
                     <ListViewItem Padding="0.1">
-                        <Grid Background="#2D2D30">
+                        <Grid Background="{Binding ThemeColorModel.OneMainBodyBackgroundColor}">
                             <Grid Padding="4" MaxHeight="360">
-                                <Border >
+                                <Border>
                                     <Button Grid.Column="0" Grid.ColumnSpan="3" Padding="0" Width="Auto" Height="Auto" Click="Button_Click">
                                         <FlipView x:Name="fv" Width="Auto" Padding="0" SelectionChanged="fv_SelectionChanged"  MinHeight="360">
                                             <FlipView.ItemTemplate>
@@ -100,7 +100,7 @@
                                                 <ColumnDefinition Width="Auto"/>
                                             </Grid.ColumnDefinitions>
                                             <Border Grid.Column="0" Background="White" Padding="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5 0">
-                                                <TextBlock Margin="6 0 0 0" FontSize="21" FontStyle="Italic"  FontFamily="Consolas" Foreground="#36C3F1" Text="{Binding Path=Vol}"/>
+                                                <TextBlock Margin="6 0 0 0" FontSize="21" FontStyle="Italic"  FontFamily="Consolas" Foreground="#36C3F1" Text="{Binding Path=PageDataBinding.Vol}"/>
                                             </Border>
                                             <Button Padding="2" HorizontalAlignment="Right" HorizontalContentAlignment="Center" Grid.Column="2" Margin="0 3 2 3" Template="{StaticResource MyButtonTemplate}">
                                                 <Button.Content>
@@ -109,8 +109,8 @@
                                                             <RowDefinition />
                                                             <RowDefinition />
                                                         </Grid.RowDefinitions>
-                                                        <TextBlock FontFamily="CoNsolas" Margin="2 2" Foreground="#36C3F1" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Row="0" Text="{Binding HeaderString}" FontSize="15" TextWrapping="Wrap" />
-                                                        <TextBlock FontFamily="CoNsolas" Margin="2 3" HorizontalAlignment="Right" Grid.Row="1" Text="{Binding ByWho}" TextWrapping="Wrap"  FontSize="12"/>
+                                                        <TextBlock FontFamily="CoNsolas" Margin="2 2" Foreground="#36C3F1" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Row="0" Text="{Binding PageDataBinding.HeaderString}" FontSize="15" TextWrapping="Wrap" />
+                                                        <TextBlock FontFamily="CoNsolas" Margin="2 3" HorizontalAlignment="Right" Grid.Row="1" Text="{Binding PageDataBinding.ByWho}" TextWrapping="Wrap"  FontSize="12"/>
                                                     </Grid>
                                                 </Button.Content>
                                             </Button>
@@ -137,7 +137,7 @@
                                                     <ColumnDefinition Width="3*"/>
                                                 </Grid.ColumnDefinitions>
                                                 <Grid Grid.Column="0">
-                                                    <TextBlock VerticalAlignment="Center"   TextWrapping="Wrap"  FontFamily="Consolas" Foreground="White" Text="{Binding MainString}" HorizontalAlignment="Center" MaxWidth="210" />
+                                                    <TextBlock VerticalAlignment="Center"   TextWrapping="Wrap"  FontFamily="Consolas" Foreground="White" Text="{Binding PageDataBinding.MainString}" HorizontalAlignment="Center" MaxWidth="210" />
                                                 </Grid>
                                                 <Rectangle Fill="LightGray" Grid.Column="1" Width="1.2" MinHeight="160" Height="Auto" VerticalAlignment="Center"/>
                                                 <Grid Padding="0" Margin="0" Grid.Column="2">
@@ -146,10 +146,10 @@
                                                         <RowDefinition  Height="3*"/>
                                                     </Grid.RowDefinitions>
                                                     <Grid Grid.Row="0">
-                                                        <TextBlock Margin="0" Foreground="Gray" FontSize="60" HorizontalAlignment="Center"  VerticalAlignment="Bottom" FontFamily="Consolas" Text="{Binding OneDay}" />
+                                                        <TextBlock Margin="0" Foreground="Gray" FontSize="60" HorizontalAlignment="Center"  VerticalAlignment="Bottom" FontFamily="Consolas" Text="{Binding PageDataBinding.OneDay}" />
                                                         <Rectangle Fill="LightGray" Width="90" Height="1" VerticalAlignment="Bottom"/>
                                                     </Grid>
-                                                    <TextBlock Grid.Row="1" Foreground="White" HorizontalAlignment="Center" Margin="0 5" VerticalAlignment="Top" FontFamily="CoNsolas" Text="{Binding OneMonthAndYear}"/>
+                                                    <TextBlock Grid.Row="1" Foreground="White" HorizontalAlignment="Center" Margin="0 5" VerticalAlignment="Top" FontFamily="CoNsolas" Text="{Binding PageDataBinding.OneMonthAndYear}"/>
                                                 </Grid>
                                             </Grid>
                                         </Border>
@@ -162,23 +162,23 @@
                         <StackPanel x:Name="OneMainStyle2" Visibility="Collapsed">
                             <Grid>
                                 <Grid Margin="10 1">
-                                    <TextBlock Text="{Binding Path=Vol}" HorizontalAlignment="Left" />
+                                    <TextBlock Text="{Binding Path=PageDataBinding.Vol}" HorizontalAlignment="Left" />
                                     <StackPanel HorizontalAlignment="Right">
-                                        <TextBlock FontFamily="CoNsolas" Margin="2 2" Foreground="#36C3F1" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Row="0" Text="{Binding HeaderString}" FontSize="15" TextWrapping="Wrap" />
-                                        <TextBlock x:Name="txtByWho" FontFamily="CoNsolas" Margin="2 3" HorizontalAlignment="Right" Grid.Row="1" Text="{Binding ByWho}" TextWrapping="Wrap"  FontSize="12"/>
+                                        <TextBlock FontFamily="CoNsolas" Margin="2 2" Foreground="#36C3F1" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Row="0" Text="{Binding PageDataBinding.HeaderString}" FontSize="15" TextWrapping="Wrap" />
+                                        <TextBlock x:Name="txtByWho" FontFamily="CoNsolas" Margin="2 3" HorizontalAlignment="Right" Grid.Row="1" Text="{Binding PageDataBinding.ByWho}" TextWrapping="Wrap"  FontSize="12"/>
                                     </StackPanel>
                                 </Grid>
                             </Grid>
                             <StackPanel>
-                                <TextBlock Margin="0" Foreground="Gray" FontSize="54" HorizontalAlignment="Center"  VerticalAlignment="Bottom" Text="{Binding OneDay}" />
-                                <TextBlock Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="CoNsolas" Text="{Binding OneMonthAndYear}"/>
+                                <TextBlock Margin="0" Foreground="Gray" FontSize="54" HorizontalAlignment="Center"  VerticalAlignment="Bottom" Text="{Binding PageDataBinding.OneDay}" />
+                                <TextBlock Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="CoNsolas" Text="{Binding PageDataBinding.OneMonthAndYear}"/>
                             </StackPanel>
                             <Border Height="{Binding ElementName=border,Path=Height}"/>
                             <StackPanel>
                                 <Border Background="#252526" Width="320" HorizontalAlignment="Center" Height="1.2" BorderThickness=".5" Margin="12"/>
                             </StackPanel>
                             <StackPanel>
-                                <TextBlock Margin="10" VerticalAlignment="Center"   TextWrapping="Wrap"  FontFamily="Consolas" Foreground="Black" Text="{Binding MainString}" HorizontalAlignment="Left" />
+                                <TextBlock Margin="10" VerticalAlignment="Center"   TextWrapping="Wrap"  FontFamily="Consolas" Foreground="Black" Text="{Binding PageDataBinding.MainString}" HorizontalAlignment="Left" />
                                 <Border Height="150"/>
                             </StackPanel>
                         </StackPanel>
