--- a/Demo_Test/Articles.xaml
+++ b/Demo_Test/Articles.xaml
@@ -21,7 +21,7 @@
             </DoubleAnimation>
         </Storyboard>
     </Page.Resources>
-    <Grid Padding="0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Padding="0" Background="{Binding ArticalThemeColorModel.MainBodyBackgroundColor}">
         <ScrollViewer Padding="0">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -29,11 +29,11 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Border x:Name="BorderHorizomtal" Width="20" />
-                <Grid Grid.Column="1" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+                <Grid Grid.Column="1" Background="{Binding ArticalThemeColorModel.MainBodyBackgroundColor}">
                     <Grid.RowDefinitions>
-                        <RowDefinition  Height="Auto"/>
-                        <RowDefinition  Height="Auto"/>
-                        <RowDefinition  Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Border Grid.Row="0" x:Name="border" Height="50">
@@ -41,7 +41,7 @@
                     </Border>
                     <Grid Grid.Row="1">
                         <!-- HERE!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                        <Border Background="#2D2D30" Padding="0" BorderBrush="#36C3F1" 
+                        <Border Background="{Binding ArticalThemeColorModel.ArticleFontBodyBackGroundColor}" Padding="0" BorderBrush="#36C3F1" 
                             BorderThickness="1.4" 
                             CornerRadius="5" Margin="6">
                             <Grid>
@@ -89,7 +89,7 @@
                         </Border>
                         <Grid Margin="6 0 6 0">
                             <!-- HERE!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-                            <Border Background="#2D2D30" Padding="0" BorderBrush="#36C3F1" 
+                            <Border Background="{Binding ArticalThemeColorModel.ArticleFontBodyBackGroundColor}" Padding="0" BorderBrush="#36C3F1" 
                             BorderThickness="1.4" 
                             CornerRadius="5" Margin="0">
                                 <Grid>
@@ -97,7 +97,7 @@
                                         <RowDefinition Height="*"/>
                                         <RowDefinition Height="Auto"/>
                                     </Grid.RowDefinitions>
-                                    <TextBlock Grid.Row="0" VerticalAlignment="Center" FontSize="16"  TextWrapping="Wrap" FontFamily="Consolas" Foreground="White" Text="{Binding FullContentBinding.FullContent}" Margin="6" LineHeight="24" />
+                                    <TextBlock Grid.Row="0" VerticalAlignment="Center" FontSize="16"  TextWrapping="Wrap" FontFamily="Consolas" Text="{Binding FullContentBinding.FullContent}" Margin="6" Foreground="White"  LineHeight="24" />
                                     <Button Grid.Row="1" x:Name="LookMore" Visibility="Visible" Click="LookMore_Click" Foreground="#36C3F1" Template="{StaticResource MyButtonTemplate}" Margin="0 0 0 30" >
                                         <StackPanel Orientation="Horizontal">
                                             <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE712;" />
@@ -113,19 +113,5 @@
             </Grid>
         </ScrollViewer>
     </Grid>
-    <!--<Page.BottomAppBar>
-            <AppBar LostFocus="AppBar_LostFocus" x:Name="AppBar" Visibility="Visible" VerticalAlignment="Bottom" IsSticky="True" >
-                <Grid>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <AppBarButton Label="刷新" Click="AppBarButton_Click">
-                            <AppBarButton.Icon>
-                                <FontIcon Glyph="&#xE72C;"  FontFamily="Segoe MDL2 Assets"/>
-                            </AppBarButton.Icon>
-                        </AppBarButton>
-                    </StackPanel>
-                </Grid>
-            </AppBar>
-        </Page.BottomAppBar>-->
-
 </Page>
  
