--- a/Demo_Test/OneQuestion.xaml
+++ b/Demo_Test/OneQuestion.xaml
@@ -16,7 +16,7 @@
             </DoubleAnimation>
         </Storyboard>
     </Page.Resources>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid  Background="{Binding OneQuestionThemeColorModel.MainBodyBackgroundColor}">
         <ScrollViewer BringIntoViewOnFocusChange="True" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Auto">
             <StackPanel>
                 <Border x:Name="borderAnime" Grid.Row="0" Height="50"/>
@@ -35,7 +35,7 @@
                         <StackPanel Grid.Column="0" VerticalAlignment="Bottom">
                             <TextBlock HorizontalAlignment="Right" FontStyle="Italic" Foreground="#36C3F1" FontFamily="Consolas" Margin="0" Text="问：" FontSize="16"/>
                             <Border HorizontalAlignment="Right" Height=".5" Width="150" Margin="0 2" Background="#36C3F1"/>
-                            <Border Background="#36C3F1" Padding="0" BorderBrush="#36C3F1" 
+                            <Border Background="{Binding OneQuestionThemeColorModel.ArticleFontBodyBackGroundColor}" Padding="0" BorderBrush="#36C3F1" 
                             BorderThickness="1.4" 
                             CornerRadius="5" Margin="9 4 4 4">
                                 <TextBlock Foreground="Gray" FontFamily="Consolas" TextWrapping="Wrap" VerticalAlignment="Center" Margin="8" HorizontalAlignment="Center" Text="{Binding OneQuestionObject.AskerName}"/>
@@ -57,7 +57,7 @@
                                 <Rectangle Margin="0" Width="14" Height="14" Fill="#36C3F1" />
                             </Border>
                             <Grid HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Column="1" Margin="-10 1 1 1">
-                                <Border Background="#36C3F1" Padding="1" BorderBrush="#36C3F1" 
+                                <Border Background="{Binding OneQuestionThemeColorModel.ArticleFontBodyBackGroundColor}" Padding="1" BorderBrush="#36C3F1" 
                             BorderThickness="1.4" 
                             CornerRadius="5" VerticalAlignment="Bottom" HorizontalAlignment="Left">
                                     <TextBlock Foreground="White" FontFamily="Consolas" Margin="9" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding OneQuestionObject.AskContent}" TextWrapping="Wrap"/>
@@ -80,7 +80,7 @@
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Grid Grid.Column="0" Margin="0">
-                                <Border Background="#36C3F1" Padding="1" BorderBrush="#36C3F1" BorderThickness="1.4" CornerRadius="5" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="2">
+                                <Border Background="{Binding OneQuestionThemeColorModel.ArticleFontBodyBackGroundColor}" Padding="1" BorderBrush="#36C3F1" BorderThickness="1.4" CornerRadius="5" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="2">
                                     <TextBlock Foreground="White" FontFamily="Consolas" Margin="12" FontSize="15" LineHeight="24" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding OneQuestionObject.AnswerContent}" TextWrapping="Wrap"/>
                                 </Border>
                             </Grid>
@@ -96,7 +96,7 @@
                             <Border VerticalAlignment="Top" Width="0.5" Height="280" Background="#36C3F1"/>
                             <StackPanel>
                                 <TextBlock FontStyle="Italic" Foreground="#36C3F1" FontFamily="Consolas" Margin="5" Text="答：" FontSize="16"/>
-                                <Border Background="#36C3F1" Padding="0" BorderBrush="#36C3F1" 
+                                <Border Background="{Binding OneQuestionThemeColorModel.ArticleFontBodyBackGroundColor}" Padding="0" BorderBrush="#36C3F1" 
                             BorderThickness="1.4" 
                             CornerRadius="5" Margin="6">
                                     <TextBlock TextAlignment="Center" FontSize="18" Margin="6"  Foreground="Gray" FontFamily="Consolas"  HorizontalAlignment="Center" TextWrapping="Wrap" Text="{Binding OneQuestionObject.AnswerName}"/>
