--- a/Demo_Test/OneThing.xaml
+++ b/Demo_Test/OneThing.xaml
@@ -6,83 +6,73 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    DataContext="{Binding oneThing,RelativeSource={RelativeSource Mode=Self}}">
-
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView Padding="0">
-            <ListViewItem Padding="0" >
-                <Grid Margin="2.5" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-                    <Grid Grid.Row="0" Margin="0">
-                        <Viewbox>
-                            <Button Padding="0">
-                                <Button.Content>
-                                    <Image Stretch="UniformToFill" Source="{Binding Path=ImagePath}"/>
-                                </Button.Content>
-                            </Button>
-                        </Viewbox>
-                    </Grid>
-                    <Viewbox Grid.Row="1">
-                        <Grid>
-                            <!--DataContext="{Binding PageDataBinding}"-->
+    DataContext="{Binding oneThingViewModel,RelativeSource={RelativeSource Mode=Self}}">
+    <Grid>
+        <ScrollViewer  BringIntoViewOnFocusChange="True" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Auto">
+            <Grid Background="{Binding OneThingColorModel.MainBodyBackgroundColor}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <ListView Grid.Row="0" Opacity="{Binding OneThingColorModel.Opacity}" Padding="0"  Background="{Binding OneThingColorModel.MainBodyBackgroundColor}">
+                    <ListViewItem Padding="0" >
+                        <Grid Margin="2.5" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            <StackPanel Grid.Row="0" Width="Auto" Height="Auto" Padding="0">
-                                <!--<Rectangle HorizontalAlignment="Center" Opacity="1" Fill="SkyBlue" Width="360" Height="1" Margin="4 5 4 2"  />-->
-                                <Border Height="Auto" Width="Auto" Padding="0">
-                                    <Grid>
-                                        <Border Padding="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5 0" Grid.Column="0"  >
-                                            <TextBlock FontFamily="Consolas" Margin="2 10" Foreground="#36C3F1" VerticalAlignment="Center" HorizontalAlignment="Center" FontStretch="Condensed" FontStyle="Italic" Grid.Row="0" Text="{Binding Header}" FontSize="18"/>
-                                        </Border>
-                                    </Grid>
-                                </Border>
-                                <Rectangle x:Name="RectangleWidth" HorizontalAlignment="Center" Opacity="0.6" Fill="#36C3F1" Width="Auto" MinWidth="350" Height="0.8" Margin="4 2" />
-                            </StackPanel>
-                            <Border Padding="0" Grid.Row="1" Width="Auto">
-                                <StackPanel Height="Auto" HorizontalAlignment="Left">
-                                    <Border Padding="0" Margin="110 3 0 -9" HorizontalAlignment="Left" BorderBrush="#36C3F1" 
-                            BorderThickness="1.4" RenderTransformOrigin="0.5,0.5" Opacity="1" >
-                                        <Border.RenderTransform>
-                                            <CompositeTransform Rotation="134.573"/>
-                                        </Border.RenderTransform>
-                                        <Rectangle Margin="0" Width="14" Height="14" Fill="#36C3F1" />
-                                    </Border>
-                                    <Border Background="#36C3F1" Padding="0" BorderBrush="#36C3F1" 
-                            BorderThickness="1.4" 
-                            CornerRadius="5" MinHeight="200" MinWidth="360" Margin="0">
-                                        <Grid>
-                                            <Grid Grid.Column="0">
-                                                <TextBlock FontSize="24" Margin="30 10" VerticalAlignment="Center"   TextWrapping="Wrap" HorizontalAlignment="Left"  FontFamily="Consolas" Foreground="White" Text="{Binding Content}" LineHeight="30" />
-                                            </Grid>
-                                        </Grid>
-                                    </Border>
-                                </StackPanel>
-                            </Border>
+                            <Grid Grid.Row="0" Margin="0">
+                                <Viewbox>
+                                    <Button Padding="0">
+                                        <Button.Content>
+                                            <Image Stretch="UniformToFill" Source="{Binding Path=oneThing.ImagePath}"/>
+                                        </Button.Content>
+                                    </Button>
+                                </Viewbox>
+                            </Grid>
                         </Grid>
-                    </Viewbox>
+                    </ListViewItem>
+                </ListView>
+                <Grid Grid.Row="1" Background="{Binding OneThingColorModel.MainBodyBackgroundColor}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" Width="Auto" Height="Auto" Padding="0">
+                        <Border Height="Auto" Width="Auto" Padding="0">
+                            <Grid>
+                                <Border Padding="0" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5 0" Grid.Column="0"  >
+                                    <TextBlock FontFamily="Consolas" Margin="2 10" Foreground="#36C3F1" VerticalAlignment="Center" HorizontalAlignment="Center" FontStretch="Condensed" FontStyle="Italic" Grid.Row="0" Text="{Binding oneThing.Header}" FontSize="18"/>
+                                </Border>
+                            </Grid>
+                        </Border>
+                        <Rectangle x:Name="RectangleWidth" HorizontalAlignment="Left" Opacity="0.6" Fill="#36C3F1" Width="Auto" MinWidth="60" Height="0.8" Margin="4 2" />
+                    </StackPanel>
+                    <Border Padding="0" Grid.Row="1" Width="Auto">
+                        <StackPanel Height="Auto" HorizontalAlignment="Left">
+                            <Border Padding="0" Margin="30 3 0 -9" HorizontalAlignment="Left" BorderBrush="#36C3F1" 
+                            BorderThickness="1.4" RenderTransformOrigin="0.5,0.5" Opacity="1" >
+                                <Border.RenderTransform>
+                                    <CompositeTransform Rotation="134.573"/>
+                                </Border.RenderTransform>
+                                <Rectangle Margin="0" Width="14" Height="14" Fill="#36C3F1" />
+                            </Border>
+                            <Border  Background="{Binding OneThingColorModel.ArticleFontBodyBackGroundColor}" Padding="0" BorderBrush="#36C3F1" 
+                            BorderThickness="1.4" 
+                            CornerRadius="5" Margin="0">
+                                <Grid>
+                                    <Grid Grid.Column="0">
+                                        <TextBlock FontSize="24" Margin="30 10" VerticalAlignment="Center" TextWrapping="Wrap" HorizontalAlignment="Left"  FontFamily="Consolas" Foreground="White" Text="{Binding oneThing.Content}" LineHeight="30" />
+                                    </Grid>
+                                </Grid>
+                            </Border>
+                        </StackPanel>
+                    </Border>
                 </Grid>
-            </ListViewItem>
-        </ListView>
+                <Grid Grid.Row="2" Height="20">
+                </Grid>
+            </Grid>
+        </ScrollViewer>
     </Grid>
-    <!--<Page.BottomAppBar>
-        <AppBar x:Name="AppBar" LostFocus="AppBar_LostFocus" Visibility="Visible" VerticalAlignment="Bottom" IsSticky="True">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    <AppBarButton Label="刷新" Click="AppBarButton_Click">
-                        <AppBarButton.Icon>
-                            <FontIcon Glyph="&#xE72C;"  FontFamily="Segoe MDL2 Assets"/>
-                        </AppBarButton.Icon>
-                    </AppBarButton>
-                    <AppBarButton Label="保存" Click="CreateFileButton_Click" x:Name="CreateFileButton">
-                        <AppBarButton.Icon>
-                            <FontIcon Glyph="&#xE74E;"  FontFamily="Segoe MDL2 Assets"/>
-                        </AppBarButton.Icon>
-                    </AppBarButton>
-                </StackPanel>
-        </AppBar>
-    </Page.BottomAppBar>-->
 </Page>
