--- a/Demo_Test/Settings.xaml
+++ b/Demo_Test/Settings.xaml
@@ -5,7 +5,8 @@
     xmlns:local="using:Demo"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    DataContext="{Binding settingsViewModel,RelativeSource={RelativeSource Mode=Self}}">
     <Page.Resources>
         <Storyboard x:Name="Story">
             <DoubleAnimation Storyboard.TargetName="border" Storyboard.TargetProperty="Height" To="0" Duration="0:0:.8" BeginTime="0:0:0" EnableDependentAnimation="True" SpeedRatio=".9">
@@ -15,7 +16,7 @@
             </DoubleAnimation>
         </Storyboard>
     </Page.Resources>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{Binding SettingsThemeColorModel.MainBodyBackgroundColor}">
         <Pivot>
             <PivotItem Header="常规">
                 <StackPanel>
