--- a/Demo_Test/About.xaml
+++ b/Demo_Test/About.xaml
@@ -5,7 +5,8 @@
     xmlns:local="using:Demo"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    DataContext="{Binding aboutViewModel,RelativeSource={RelativeSource Mode=Self}}">
     <Page.Resources>
         <Storyboard x:Name="Story">
             <DoubleAnimation Storyboard.TargetName="border" Storyboard.TargetProperty="Height" To="0" Duration="0:0:.8" BeginTime="0:0:0" EnableDependentAnimation="True" SpeedRatio=".9">
@@ -23,7 +24,7 @@
 
         <Border Grid.Row="0" Height="80" x:Name="border">
         </Border>
-        <Grid Opacity=".6" Grid.Row="1">
+        <Grid Opacity="{Binding AboutThemeColorModel.Opacity}" Grid.Row="1">
             <Image Source="ms-appx:///Assets/About/about.png" Stretch="UniformToFill" />
             <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center" Text="开发者的微博：" Foreground="White" Margin="-110 0 0 180" FontFamily="Microsoft YaHei"/>
             <TextBlock Text="特别感谢 @Smile贺0 的大力相助✊" HorizontalAlignment="Center" FontFamily="Consolas" VerticalAlignment="Bottom" Foreground="White" Margin="0 230"/>
